@@ -14,11 +14,8 @@
     <!-- jquery must be loaded here -->
     <script src="contrib/jquery-1.8.3.js"></script>
 
-    <!-- TODO: remove this? -->
-    <script src='contrib/require-2.1.2.js'></script>
-
     <!-- sim -->
-    <script src='deploy/debug/example-sim-debug.js'></script>
+    <script src='deploy/release/example-sim.min.js'></script>
 
 </head>
 <body>
