@@ -1,3 +1,4 @@
+2/16/13 fix example-sim-debug.html, check in example-sim-release.html (for grunt testing)
 2/16/13 reformat grunt.js with 2-space indents
 2/16/13 check in almond-0.2.5.js, shim loader for use with grunt
 2/16/13 rewrite PerformanceMonitor using inheritance
